unpackaged/main/default/objects/Bot_Command__c/fields/Sample_Utterance__c.field-meta.xml
<CustomField>
        <fullName>Sample_Utterance__c</fullName>
        <label>Sample Utterance</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>